# Django_DRF_Auth

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
